--- a/ZSözlük/Views/Home/Index.cshtml
+++ b/ZSözlük/Views/Home/Index.cshtml
@@ -1,46 +1,49 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/img/zKusagı1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block text-danger">
-                    <h2><strong>Z Kusağı Ve Özgürlük</strong></h2>
-                    <h5><strong>Z Kuşağı olarak adlandırılan yeni nesil gençler özgürlüklerine herkesten daha fazla düşkündür.</strong></h5>
+    <div class="mt-3">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/zKusagı1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-danger">
+                        <h2><strong>Z Kusağı Ve Özgürlük</strong></h2>
+                        <h5><strong>Z Kuşağı olarak adlandırılan yeni nesil gençler özgürlüklerine herkesten daha fazla düşkündür.</strong></h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/zKusagıGenc1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-danger">
+                        <h2><strong>Z Kuşağı Ve Tartışma Kültürü</strong></h2>
+                        <h5><strong>Z Kuşağının en dikkat çekici özelliklerinden biri de tartışmayı ve fikirlerini açıklamayı çok sevmeleridir.</strong></h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/z-kusagi.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block  text-danger">
+                        <h2><strong>Z Kuşağı umut vaat ediyor</strong></h2>
+                        <h5><strong>Uzun yıllardan beridir 2000 den sonra doğan neslin dünyaya değişterceği düşünülmektedir.</strong></h5>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="/img/zKusagıGenc1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block text-danger">
-                    <h2><strong>Z Kuşağı Ve Tartışma Kültürü</strong></h2>
-                    <h5><strong>Z Kuşağının en dikkat çekici özelliklerinden biri de tartışmayı ve fikirlerini açıklamayı çok sevmeleridir.</strong></h5>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/img/z-kusagi.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block  text-danger">
-                    <h2><strong>Z Kuşağı umut vaat ediyor</strong></h2>
-                    <h5><strong>Uzun yıllardan beridir 2000 den sonra doğan neslin dünyaya değişterceği düşünülmektedir.</strong></h5>
-                </div>
-            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
-
+    <div>
+        <br />
+    </div>
     <div class="jumbotron">
         <h1 class="display-4">Selam, Genç!</h1>
         <p class="lead">Z Kuşağının Sözlüğüne Hoşgeldin !!</p>
