--- a/ZSözlük/Views/Shared/_Header.cshtml
+++ b/ZSözlük/Views/Shared/_Header.cshtml
@@ -4,9 +4,9 @@
 }
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="/">
-                <img src="/img/ZLogo.png" width="50" height="50" /> Z Sözlük 
+                <img src="/img/ZLogo.png" width="30" height="30" /> Z Sözlük 
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,8 +28,8 @@
                     <label class="m-sm-4 "></label>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary">Login</a>
-                            <a asp-controller="Account" asp-action="SignUp" class="btn btn-primary">Register</a>
+                            <a asp-controller="" asp-action="" class="btn btn-primary">Login</a>
+                            <a asp-controller="" asp-action="" class="btn btn-primary">Register</a>
                         </li>
                     </ul>
                 </form>
