--- a/ZSözlük/Views/Shared/_Header.cshtml
+++ b/ZSözlük/Views/Shared/_Header.cshtml
@@ -15,10 +15,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" asp-controller="" asp-action="">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="" asp-action="">List1</a>
+                        <a class="nav-link" asp-controller="Sozluk" asp-action="Index">Tartışmalar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="" asp-action="">List2</a>
