--- a/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
+++ b/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
@@ -6,15 +6,17 @@
     @foreach (var item in Model)
     {
         <br />
-        <div class="row">
-
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="mt-1">içerik yazarının adi</h5>
-                    <p><bold>@item.IcerikFull</bold></p>
-                </div>
+        <div class="card border-primary">
+            <div class="card-header">
+                <strong>--Yazar adı--</strong>
             </div>
-        </div>
+            <div class="card-body">                
+                <p class="card-text">@item.IcerikFull</p>
+            </div>
+            <div class="text-md-right mr-1 text-muted">
+                2 days ago
+            </div>
+        </div> 
     }
 }
 else
