--- a/ZSözlük/Views/Shared/_Layout.cshtml
+++ b/ZSözlük/Views/Shared/_Layout.cshtml
@@ -11,27 +11,21 @@
 
     <partial name="_Header" />
 
-    @*<div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>*@
-
     <div class="mt-2">
         <div class="container-fluid">
             @RenderBody()
         </div>
     </div>
 
-
+   
         <footer class="border-top footer text-muted">
-            <div class="container">
+            <div class="container mt-1">
                 &copy; 2020 - ZSözlük - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </footer>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @RenderSection("Scripts", required: false)
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
