--- a/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
+++ b/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
@@ -14,7 +14,7 @@
                 <p class="card-text">@item.IcerikFull</p>
             </div>
             <div class="text-md-right mr-1 text-muted">
-                2 days ago
+               @item.IcerikTarih.ToShortDateString()
             </div>
         </div> 
     }
