--- a/ZSözlük/Views/Sozluk/Index.cshtml
+++ b/ZSözlük/Views/Sozluk/Index.cshtml
@@ -1,20 +1,22 @@
 ﻿@model Icerik
 
 @{
+
     ViewBag.Title = "Anasayfa";
 }
 <div class="row">
-    <div class="col-md-3">
 
-        <div id="PlaceHolderHere"></div>
+    <div class="col-md-3">
 
         <div class="text-md-right">
             <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#KonuEkle" data-url="@Url.Action("KonuEkle")">Konu Ekle</button>
         </div>
+        <div id="PlaceHolderHere"></div>
 
-        @await Component.InvokeAsync("KonuList")
+            @await Component.InvokeAsync("KonuList")
 
     </div>
+
     <div class="col-md-7">
         @if (ViewBag.konuid > 0)
         {
@@ -23,6 +25,7 @@
                     <div class="form-group">
                         <textarea asp-for="KonuID" class="form-control" hidden></textarea>
                         <textarea asp-for="IcerikFull" class="form-control" placeholder="Fikirler Paylaştıkça Çoğalır"></textarea>
+                        <span asp-validation-for="@Model.IcerikFull" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Paylas" class="btn btn-success" />
