--- a/ZSözlük/Views/Sozluk/KonuEkle.cshtml
+++ b/ZSözlük/Views/Sozluk/KonuEkle.cshtml
@@ -1,38 +1,29 @@
 ﻿@model Konu
 
-<div class="modal fade" id="KonuEkle">
-    <div class="modal-dialog">
+<div class="modal fade" id="form" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="form">
         <!--Modal Content-->
         <div class="modal-content">
 
-            <div class="modal-header">
+            <div class="modal-header  border-bottom-0">
                 <h4>Konu Ekle</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
             </div>
 
-
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-12">
-                        <form asp-action="KonuEkle">
-                            <div class="container mt-3">
-                                <input type="hidden" asp-for="KonuID" />
-                                <div class="form-group">
-                                    <input asp-for="KonuBaslık" class="form-control" placeholder="Yeni Bir Tartışma Konusu Yaz" />
-                                    <span asp-validation-for="@Model.KonuBaslık" class="text-danger"></span>
-                                </div>
-                            </div>
-                        </form>
+            <form asp-action="KonuEkle">
+                <div class="modal-body">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    @*<input type="hidden" asp-for="KonuID"/>*@
+                    <div class="form-group">
+                        <input asp-for="KonuBaslık" class="form-control" placeholder="Yeni Bir Tartışma Konusu Yaz" />
+                        <span asp-validation-for="KonuBaslık" class="text-danger"></span>
                     </div>
                 </div>
-            </div>
-
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary text-right" data-save="modal">Paylaş</button>
-                <button type="button" class="btn btn-warning" data-dismiss="modal">Vazgeç</button>
-
-            </div>
-
+                <div class="modal-footer border-top-0 d-flex justify-content-center">
+                    <button type="submit" value="KonuEkle" class="btn btn-success">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
+
