--- a/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
+++ b/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
@@ -27,8 +27,8 @@
         var nextDisabled = !Model.NextPage ? "disabled" : "";
     }
 
-    <a  asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @prevDisabled">Previous</a>
-    <a  asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled">Next</a>
+    <a  asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @prevDisabled">Previous</a>
+    <a  asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)"  asp-route-Konuid=@ViewBag.konuid class="btn btn-default @nextDisabled">Next</a>
 </div>
 
 <br />
