--- a/ZSözlük/Areas/Admin/Views/Admin/Index.cshtml
+++ b/ZSözlük/Areas/Admin/Views/Admin/Index.cshtml
@@ -30,5 +30,27 @@
     var nextDisabled = !Model.NextPage ? "disabled" : "";
 }
 
-<a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @prevDisabled">Previous</a>
-<a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled">Next</a>
+<nav>
+    <ul class="pagination justify-content-center">
+        <li class="page-item ">
+            <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @prevDisabled">Previous</a>
+        </li>
+
+        <li class="page-item active">
+            <a class="page-link" href="#">@Model.PageIndex<span class="sr-only"></span></a>           
+        </li>
+
+        <li class="page-item ">
+            <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled">Next</a>
+        </li>
+    </ul>
+</nav>
+
+@*
+    <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @prevDisabled">Previous</a>
+    @for (int i = Model.PageIndex; i < Model.TotalPages+3; i++)
+    {
+        <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber=@(i+1) class="btn btn-default ">@(i+1)</a>
+    }
+    <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled">Next</a>
+*@
