--- a/ZSözlük/Views/Shared/_Header.cshtml
+++ b/ZSözlük/Views/Shared/_Header.cshtml
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a asp-controller="" asp-action="" class="btn btn-primary">Login</a>
-                            <a asp-controller="" asp-action="" class="btn btn-primary">Register</a>
+                            <a asp-controller="Account" asp-action="Signup" class="btn btn-primary">Register</a>
                         </li>
                     </ul>
                 </form>
