--- a/ZSözlük/Views/Shared/_Header.cshtml
+++ b/ZSözlük/Views/Shared/_Header.cshtml
@@ -28,7 +28,7 @@
                     <label class="m-sm-4 "></label>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a asp-controller="" asp-action="" class="btn btn-primary">Login</a>
+                            <a asp-controller="Account" asp-action="Login" class="btn btn-primary">Login</a>
                             <a asp-controller="Account" asp-action="Signup" class="btn btn-primary">Register</a>
                         </li>
                     </ul>
