added user for icerik

--- a/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
+++ b/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
@@ -8,7 +8,7 @@
             <br />
             <div class="card border-primary">
                 <div class="card-header">
-                    <strong>--Yazar adı--</strong>
+                    <strong>@item.UserName</strong>
                 </div>
                 <div class="card-body">
                     <p class="card-text">@item.IcerikFull</p>
