--- a/ZSözlük/Views/Account/Login.cshtml
+++ b/ZSözlük/Views/Account/Login.cshtml
@@ -15,45 +15,38 @@
 </head>
 <body>
 
-    <div class="container">
-        <h4>Sign In</h4>
-        <hr />
-
-        <div class="row">
-            <div class="col-md-4">
-                <form asp-action="Login">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="UserName" class="control-label"></label>
-                        <input asp-for="UserName" class="form-control" />
-                        <span asp-validation-for="UserName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
-                        </label>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Login" class="btn btn-primary" />
-                    </div>
-                </form>
+    <div class="container my-5">
+        <div class="card">
+            <h4 class="card-header info-color text-center py-4">
+                <strong>Giriş Yap</strong>
+            </h4>
+            <form asp-action="Login" class="text-center border border-light p-5">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="UserName" class="control-label"></label>
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+                    </label>
+                </div>
+                <div class="form-group ">
+                    <input type="submit" value="Login" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" />
+                </div> <div>
+                    <a asp-controller="Sozluk" asp-action="Index" class="btn btn-outline-danger btn-rounded btn-block my-4 waves-effect z-depth-0">Vazgeç</a>
+                </div>
+            </form>
+            <div class="text-center">
+                <p>Kayıt olmak için <a asp-action="Signup" asp-controller="Account"> buraya </a> tıkla</p>
             </div>
-        </div>                                                                                                                             
-
-        <div class="col-md-8">
-            <img src="" class="img-fluid" />
         </div>
-
-        <div>
-            <p>Kayıt olmak için <a asp-action="Signup" asp-controller="Account"> buraya </a> tıkla</p>
-        </div>
-
-    </div>
-
+      </div>
 </body>
 </html>
