--- a/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
+++ b/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
@@ -8,7 +8,7 @@
             <br />
             <div class="card small border">
                 <div class="card-header">
-                    <strong>@item.UserName</strong>
+                    <strong><a asp-action="UserDetail" asp-route-Userid=@item.UserID>@item.UserName</a></strong>
                 </div>
                 <div class="card-body">
                     <p class="card-text">@item.IcerikFull</p>
