--- a/ZSözlük/Views/Sozluk/UserDetail.cshtml
+++ b/ZSözlük/Views/Sozluk/UserDetail.cshtml
@@ -32,7 +32,7 @@
                         </div>
                         <div class="text-center">
                             <h3>
-                                @Model.FirstName <span class="font-weight-light">, 27</span>
+                                @Model.FirstName @Model.LastName <span class="font-weight-light">, 27</span>
                             </h3>
                             <div class="h5 font-weight-300">
                                 <i class="ni location_pin mr-2"></i>@Model.Email
