--- a/ZSözlük/Views/Shared/_LoginInfo.cshtml
+++ b/ZSözlük/Views/Shared/_LoginInfo.cshtml
@@ -1,15 +1,16 @@
 ﻿@inject Microsoft.AspNetCore.Identity.SignInManager<ApplicationUser> _signInManager
 
 @if (_signInManager.IsSignedIn(User))
-{
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <b>@User.Identity.Name</b>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Logout</a>
-        </div>
-    </li>
+{   
+        <li class="nav-item dropdown mr-3">
+            <a class="nav-link dropdown-toggle text-dark" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <b>@User.Identity.Name</b>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item small" asp-action="MyProfile" asp-controller="Sozluk">My Profile</a>
+                <a class="dropdown-item small" asp-action="Logout" asp-controller="Account">Logout</a>
+            </div>
+        </li>
 }
 else
 {
