--- a/ZSözlük/Views/Sozluk/MyProfile.cshtml
+++ b/ZSözlük/Views/Sozluk/MyProfile.cshtml
@@ -17,16 +17,50 @@
             </div>
         </div>
         <div class="card border-0">
-            <div class="card-body text-center">
+            <div class="card-body text-center">             
                 <p class="card-text font-weight-bold">First Name : @Model.FirstName</p>
                 <p class="card-text font-weight-bold">Last  Name : @Model.LastName</p>
                 <p class="card-text font-weight-bold">Email address : @Model.Email</p>
                 <p class="card-text font-weight-bold">User name : @Model.UserName</p>
-                <a class="btn btn-dark text-center text-white w-25 ">Bilgilerimi Güncelle</a>
+                <a class="btn btn-dark text-center text-white w-25 " data-toggle="modal" data-target="#Editİnfo" role="button">Bilgilerimi Güncelle</a>
             </div>
-        </div>       
+        </div>
     </div>
     <div class="col-md-7">
-        @await Component.InvokeAsync("IcerikListByUser", new { Userid = Model.Id, pageNumber = ViewBag.pageNumber,MyPage = true })
+        @await Component.InvokeAsync("IcerikListByUser", new { Userid = Model.Id, pageNumber = ViewBag.pageNumber, MyPage = true })
+    </div>
+</div>
+
+<div class="modal fade" id="Editİnfo" tabindex="-1" role="dialog" aria-labelledby="odalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">Kişisel Bilgilerim</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form asp-action="EditPersonalinfo">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id"/>
+                    <div class="form-group">
+                        <input asp-for="FirstName" class="form-control"/>
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input asp-for="LastName" class="form-control"/>
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input asp-for="Email" class="form-control"/>
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="modal-footer flex justify-content-center">
+                        <button  asp-action="EditPersonalinfo" asp-controller="Account" asp-route-id="@Model.Id" class="btn btn-outline-success">Kaydet</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
