--- a/ZSözlük/Areas/Admin/Views/Admin/Index.cshtml
+++ b/ZSözlük/Areas/Admin/Views/Admin/Index.cshtml
@@ -1,56 +1,10 @@
-﻿@using ZSözlük.Entities
-@using ZSözlük.Models.ViewModel
-@model PaginatedListModel<Icerik>  // List<Icerik>
-
-<h1> Admin Paneli </h1>
-
-<table class="table table-bordered table-hover mt-2">
-    <tr>
-        <th>içerik ıd </th>
-        <th>konu </th>
-        <th>içerik </th>
-        <th>Sil</th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.IcerikID</td>
-            <td>@item.KonuID</td>
-            <td>@item.IcerikFull</td>
-            <td>
-                <a asp-action="DeleteIcerik" asp-route-id=@item.IcerikID class="btn btn-sm btn-outline-danger text-dark"> Sil </a>
-            </td>
-        </tr>
-    }
-</table>
-
-
-@{
-    var prevDisabled = !Model.PreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.NextPage ? "disabled" : "";
-}
-
-<nav>
-    <ul class="pagination justify-content-center">
-        <li class="page-item ">
-            <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @prevDisabled">Previous</a>
-        </li>
-
-        <li class="page-item active">
-            <a class="page-link" href="#">@Model.PageIndex<span class="sr-only"></span></a>           
-        </li>
-
-        <li class="page-item ">
-            <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled">Next</a>
-        </li>
-    </ul>
-</nav>
-
-@*
-    <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-default @prevDisabled">Previous</a>
-    @for (int i = Model.PageIndex; i < Model.TotalPages+3; i++)
-    {
-        <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber=@(i+1) class="btn btn-default ">@(i+1)</a>
-    }
-    <a asp-area="Admin" asp-controller="Admin" asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-default @nextDisabled">Next</a>
-*@
+﻿<div class="container mt-5">
+    <div class="jumbotron">
+        <h1 class="display-4">Selam Admin!</h1>
+        <p class="lead">Z Sözlüğün Admin Paneline Hoşgeldin !!</p>
+        <hr />
+        <p>
+            Bu panel henüz tamamlanmadı. Tamamlanan özellikleri navbar kısmında görebilirsin. Şikayetler bölümü eklenecek..
+        </p>
+    </div>
+</div>
