--- a/ZSözlük/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ZSözlük/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-
-    @*  <partial name="_Header" /> *@
-
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+        <nav class="navbar navbar-expand-lg navbar-light bg-info">
             <a class="navbar-brand" href="/">
                 <img src="/img/ZLogo.png" width="30" height="30" /> Z Sözlük
             </a>
@@ -23,18 +20,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">AAA</a>
+                        <a class="nav-link" asp-controller="Admin" asp-action="IcerikList">İcerik Listesi </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Sozluk" asp-action="Index">BBB</a>
+                        <a class="nav-link" asp-controller="Admin" asp-action="KonuList">Konu Listesi </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Admin" asp-action="UserList">Kullanıcı Listesi </a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <label class="m-sm-4 "></label>
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a asp-controller="" asp-action="" class="btn btn-outline-dark">Login</a>
-                            <a asp-controller="" asp-action="" class="btn btn-outline-dark">Register</a>
+                        <li class="nav-item dropdown mr-3">
+                            <a class="nav-link dropdown-toggle text-dark" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <b>@User.Identity.Name</b>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item small" asp-area="" asp-action="Logout" asp-controller="Account">Logout</a>
+                            </div>
                         </li>
                     </ul>
                 </form>
