added User profile photo

--- a/ZSözlük/Views/Sozluk/UserDetail.cshtml
+++ b/ZSözlük/Views/Sozluk/UserDetail.cshtml
@@ -16,7 +16,7 @@
                         <div class="col-lg-7 order-lg-7">   
                             <div class="card-profile-image mt-2">
                                 <a href="#">
-                                    <img src="/img/User.jpg" width="250" height="250" class="rounded-circle">
+                                    <img src="/img/@Model.Photo" width="250" height="250" class="rounded-circle">
                                 </a>
                             </div>
                         </div>
