--- a/ZSözlük/Views/Sozluk/MyProfile.cshtml
+++ b/ZSözlük/Views/Sozluk/MyProfile.cshtml
@@ -11,13 +11,13 @@
             <div class="col-lg-4 order-lg-5">
                 <div class="card-profile-image mt-2">
                     <a href="#">
-                        <img src="/img/User.jpg" width="250" height="250" class="rounded-circle">
+                        <img src="/img/@Model.Photo" width="250" height="250" class="rounded-circle">
                     </a>
                 </div>
             </div>
         </div>
-        <div class="card border-0">
-            <div class="card-body text-center">             
+        <div class="card border-0">          
+            <div class="card-body text-center mt-5">
                 <p class="card-text font-weight-bold">First Name : @Model.FirstName</p>
                 <p class="card-text font-weight-bold">Last  Name : @Model.LastName</p>
                 <p class="card-text font-weight-bold">Email address : @Model.Email</p>
@@ -43,9 +43,12 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form asp-action="EditPersonalinfo">
+                <form asp-action="EditPersonalinfo" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="Id" />
+                    <div class="form-group">
+                        <input type="file" asp-for="Photo" class="form-control-file" />
+                    </div>
                     <div class="form-group">
                         <input asp-for="FirstName" class="form-control" />
                         <span asp-validation-for="FirstName" class="text-danger"></span>
