updated login and signup page

--- a/ZSözlük/Views/Account/SignUp.cshtml
+++ b/ZSözlük/Views/Account/SignUp.cshtml
@@ -68,7 +68,7 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" />
+                    <input type="submit" value="Kaydet" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" />
                 </div>
                 <div>
                     <a asp-controller="Sozluk" asp-action="Index" class="btn btn-outline-danger btn-rounded btn-block my-4 waves-effect z-depth-0">Vazgeç</a>
