--- a/ZSözlük/Views/Account/Login.cshtml
+++ b/ZSözlük/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
                     </label>
                 </div>
                 <div class="form-group ">
-                    <input type="submit" value="Login" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" />
+                    <input type="submit" value="Giriş Yap" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" />
                 </div> <div>
                     <a asp-controller="Sozluk" asp-action="Index" class="btn btn-outline-danger btn-rounded btn-block my-4 waves-effect z-depth-0">Vazgeç</a>
                 </div>
