--- a/ZSözlük/Views/Home/Index.cshtml
+++ b/ZSözlük/Views/Home/Index.cshtml
@@ -68,7 +68,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                ...
+                <p class="font-weight-bold">1 - Zsözlük kullanıcıları herkesin ifade özgürlüğüne saygı duymalıdır.</p>
+                <p class="font-weight-bold">2 - Paylaşımlarımızda din, dil, ırk, cinsiyet ayrımı yapılmamaya özen gösterilmelidir.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
