--- a/ZSözlük/Views/Home/Index.cshtml
+++ b/ZSözlük/Views/Home/Index.cshtml
@@ -12,25 +12,28 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/zKusagı1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block text-dark">
+                        <img src="/img/Zdp.png" class="d-block w-100">
+                        @*<div class="carousel-caption d-none d-md-block text-white-50">
                             <h2><strong>Z Kusağı Ve Özgürlük</strong></h2>
                             <h5><strong>Z Kuşağı olarak adlandırılan yeni nesil gençler özgürlüklerine herkesten daha fazla düşkündür.</strong></h5>
-                        </div>
+                        </div>*@
                     </div>
-                    <div class="carousel-item">
-                        <img src="/img/zKusagıGenc1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block text-dark">
+                    @* <div class="carousel-item">
+                         <img src="/img/zKusagıGenc1.jpg" class="d-block w-100" alt="...">
+                         <div class="carousel-caption d-none d-md-block text-dark">
                             <h2><strong>Z Kuşağı Ve Tartışma Kültürü</strong></h2>
                             <h5><strong>Z Kuşağının en dikkat çekici özelliklerinden biri de tartışmayı ve fikirlerini açıklamayı çok sevmeleridir.</strong></h5>
                         </div>
-                    </div>
+                     </div>*@
                     <div class="carousel-item">
-                        <img src="/img/z-kusagi.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block  text-dark">
+                        <img src="/img/z-kusagi.jpg" class="d-block w-100">
+                        @*<div class="carousel-caption d-none d-md-block  text-dark">
                             <h2><strong>Z Kuşağı umut vaat ediyor</strong></h2>
                             <h5><strong>Uzun yıllardan beridir 2000 den sonra doğan neslin dünyaya değişterceği düşünülmektedir.</strong></h5>
-                        </div>
+                        </div>*@
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/img/zKusagı1.jpg" class="d-block w-100">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -47,13 +50,13 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Selam Genç!</h1>
-        <p class="lead">Z Kuşağının Sözlüğüne Hoşgeldin !!</p>
+        <p class="lead">Z Sözlük Hoşgeldin !!</p>
         <hr />
         <p>
             Bu sözlük fikirlerimizi özgürce ifade edebilmek, tartışmak ve yardımlaşmak için kuruldu. Bu sözlük diğer sözlüklerdeki rahatsız ortamlardan sıkılan, sadece problem tespit
-            etmekle yetinmeyen çözüm önerisi de sunan, dünyaya farklı bir pencereden bakan, ifade özgürlüğünü yaşama özgürlüğünün ayrılmaz bir parçası olarak gören Z kuşağının sözlüğüdür
+            etmekle yetinmeyen çözüm önerisi de sunan, dünyaya farklı bir pencereden bakan, ifade özgürlüğünü yaşama özgürlüğünün ayrılmaz bir parçası olarak kabul edenlerin sözlüğüdür.
         </p>
-        <a class="btn btn-primary" data-toggle="modal" data-target="#SozlukKurallarıModal" role="button">Sözlük Kuralları</a>
+        <a class="btn btn-primary text-white" data-toggle="modal" data-target="#SozlukKurallarıModal" role="button"><b>Sözlük Kuralları</b></a>
     </div>
 </div>
 
@@ -62,7 +65,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="ModalLabel">SÖZLÜK KURALLARIMIZ</h5>
+                <h5 class="modal-title" id="ModalLabel"><b>SÖZLÜK KURALLARIMIZ</b></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -71,9 +74,9 @@
                 <p class="font-weight-bold">1 - Zsözlük kullanıcıları herkesin ifade özgürlüğüne saygı duymalıdır.</p>
                 <p class="font-weight-bold">2 - Paylaşımlarımızda din, dil, ırk, cinsiyet ayrımı yapılmamaya özen gösterilmelidir.</p>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+            @*<div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+                </div>*@
         </div>
     </div>
 </div>
