--- a/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
+++ b/ZSözlük/Views/Shared/Components/IcerikList/Default.cshtml
@@ -1,53 +1,70 @@
 ﻿@model PaginatedListModel<Icerik>
-
-
+@inject ZSözlük.IServices.ILikeService Like
+@inject Microsoft.AspNetCore.Identity.UserManager<ApplicationUser> _userManager
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 @if (Model.Count > 0)
 {
-        @foreach (var item in Model)
-        {
-            <br />
-            <div class="card small border">
-                <div class="card-header">
-                    <strong><a asp-action="UserDetail" asp-route-Userid=@item.UserID>@item.UserName</a></strong>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">@item.IcerikFull</p>
-                </div>
-                <div class="text-md-right mr-1 text-muted small">
-                    @item.IcerikTarih.ToShortDateString()
-                </div>
+    @foreach (var item in Model)
+    {
+        <br />
+        <div class="card small border">
+            <div class="card-header">
+                <strong><a asp-action="UserDetail" asp-route-Userid=@item.UserID>@item.UserName</a></strong>
             </div>
-        }
+            <div class="card-body">
+                <p class="card-text">@item.IcerikFull</p>
+            </div>
+            <div>
+                @{
+                    string userid = _userManager.GetUserId(User);
+                    if (!Like.isLike(item.IcerikID, userid))
+                    {
 
-<br />   
-     
-<div class="border-primary text-center">
-    @{
-        var prevDisabled = !Model.PreviousPage ? "disabled" : "";
-        var nextDisabled = !Model.NextPage ? "disabled" : "";
+                        <a asp-action="Like" asp-controller="Like" asp-route-id="@item.IcerikID" class="btn btn-light bi bi-star ml-3 "> @Like.CountOfLike(item.IcerikID) likes</a>
+                    }
+                    else
+                    {
+                        <a asp-action="CancelLike" asp-controller="Like" asp-route-id="@item.IcerikID" class="btn btn-light bi bi-star-fill ml-3"> @Like.CountOfLike(item.IcerikID) likes</a>
+                    }
+                }
+            </div>
+            <div class="text-md-right mr-1 text-muted">
+                @item.IcerikTarih.ToShortDateString()
+            </div>
+        </div>
     }
-    <nav>
-        <ul class="pagination justify-content-center">
-            <li class="page-item ">
-                <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @prevDisabled">Previous</a>
-            </li>
 
-            <li class="page-item active">
-                <a class="page-link" href="#">@Model.PageIndex<span class="sr-only"></span></a>
-            </li>
+    <br />
 
-            <li class="page-item ">
-                <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @nextDisabled">Next</a>
-            </li>
-        </ul>
-    </nav>
 
-    @* <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @prevDisabled">Previous</a>
-        <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @nextDisabled">Next</a>
-    *@
-</div>
 
-<br />
+    <div class="border-primary text-center">
+        @{
+            var prevDisabled = !Model.PreviousPage ? "disabled" : "";
+            var nextDisabled = !Model.NextPage ? "disabled" : "";
+        }
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li class="page-item ">
+                    <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @prevDisabled">Previous</a>
+                </li>
+
+                <li class="page-item active">
+                    <a class="page-link" href="#">@Model.PageIndex<span class="sr-only"></span></a>
+                </li>
+
+                <li class="page-item ">
+                    <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @nextDisabled">Next</a>
+                </li>
+            </ul>
+        </nav>
+
+        @* <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @prevDisabled">Previous</a>
+            <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)" asp-route-Konuid=@ViewBag.konuid class="btn btn-default @nextDisabled">Next</a>
+        *@
+    </div>
+
+    <br />
 
 }
 else
